# Add-Remote

./: .gitignore  Add-Remote.code-workspace  Cargo.toml  README.md  rustfmt.toml
.github/workflows/: ci.yml
MSVC/: Add-Remote.sln  liballoc.natvis  libcollections.natvis  libcore.natvis
src/: input_getter.rs  known_users.rs  main.rs  repo.rs
