[package]
authors = ["Fraser Hutchison <fraser.hutchison@maidsafe.net>"]
categories = ["command-line-utilities", "development-tools"]
description = "An interactive CLI tool to add a remote fork to a local Git repository."
keywords = ["git", "github"]
license = "Apache-2.0 OR MIT"
name = "add-remote"
readme = "README.md"
repository = "https://github.com/Fraser999/Add-Remote.git"
version = "2.0.1"

[dependencies]
colour = "0.2"
ctrlc = "3.1"
find_git = "1.2"
reqwest = "0.8"
serde_json = "1.0"
unwrap = "1.1"
