[package]
authors = ["Fraser Hutchison <fraser.hutchison@maidsafe.net>"]
categories = ["command-line-utilities", "development-tools"]
description = "An interactive CLI tool to add a remote fork to a local Git repository."
keywords = ["git", "github"]
license = "Apache-2.0 OR MIT"
name = "add-remote"
readme = "README.md"
repository = "https://github.com/Fraser999/Add-Remote.git"
version = "2.2.2"

[dependencies]
colour = "0.3"
ctrlc = "3"
find_git = "1"
reqwest = "0.9"
serde_json = "1"
unwrap = "1"
